# slack-status-cli

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt  set_version.py
.github/workflows/: main.yml  release.yml
script/: bootstrap  bootstrap.sh  lock  lock.sh
slack_status_cli/: client.py  logger.py  main.py
tests/: conftest.py  test_integration.py
tests/__snapshots__/: test_integration.ambr
