[tool.poetry]
name = "slack-status-cli"
version = "0.1.0"
description = ""
authors = ["Marc Cataford <mcat@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
syrupy = "^1.7.4"

[tool.poetry.scripts]
slack-status-cli = "slack_status_cli.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
