[project]
name = "slack-status-cli"
version = "0.1.0"
description = "Tooling to set your Slack status on the fly without having to click around"
requires-python = ">=3.8"
readme = "README.md"
[[project.authors]]
name = "Marc Cataford"
email = "mcat@riseup.net"

[project.urls]
Homepage = "https://github.com/mcataford/slack-status-cli"
"Bug Tracker" = "https://github.com/mcataford/slack-status-cli/issues"

[tool.setuptools]
packages = [ "slack_status_cli",]
